--- a/.github/workflows/keep-active.yml
+++ b/.github/workflows/keep-active.yml
@@ -4,13 +4,15 @@ run-name: ${{ github.actor }} trigger workflow
 
 on:
   schedule:
-    - cron "53 11 * * 1,3,4,5,6"
+    - cron "*/15 * * * *"
 
 jobs:
   keep-live:
     runs-on: ubuntu-latest
+
     permissions:
       contents: write
+
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
