--- a/.github/workflows/keep-active.yml
+++ b/.github/workflows/keep-active.yml
@@ -4,7 +4,7 @@ run-name: ${{ github.actor }} trigger workflow
 
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "45 17 * * 1,3,4,5,6"
 
 jobs:
   keep-live-job:
